Fixed off-canvas issues on iphone

--- a/scss/3-layout/_header.scss
+++ b/scss/3-layout/_header.scss
@@ -79,16 +79,17 @@ nav {
             position: absolute;
             z-index: 1;
             right: 0;
-            height: 100vh;
             top: 0;
+            left: 0;
+            height: 100vh;
             background: rgba(51, 51, 51, 0.95);
             border-radius: 8px;
             display: flex;
             flex-direction: column;
             align-items: center;
             width: 100%;
-            transform: translateX(100%);
-            transition: transform 0.5s ease-in;
+            transform: scaleX(0);
+            transition: transform 0.3s ease-in;
 
             li {
                 margin: 2rem 0 0;
@@ -111,7 +112,7 @@ nav {
         }
 
         .nav-active {
-            transform: translateX(0%);
+            transform: scaleX(1);
         }
     }
 }
